<resources>
    <string name="app_name">News Room</string>

    <!-- Menu -->
    <string name="menu_home">News</string>
    <string name="menu_fav">Favorite</string>
    <string name="menu_recent">Recent</string>
    <string name="menu_search">Search</string>

    <!-- News View -->
    <string name="news_title">Ulas Huawei 40 Mate Pro Seharga Motor Sport Bekas - CNN Indonesia</string>
    <string name="news_desc">Huawei 40 Mate Pro dijual dengan harga Rp15,999 juta di Indonesia.</string>
    <string name="news_meta">detik.com</string>
    <string name="news_date">16 Januari 2021 12.32</string>
    <string name="news_thumbnail">Gambar</string>
    <string name="news_fav">Favorit</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_news">News</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>