<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_article"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="100"
        android:title="@string/menu_fav"
        android:icon="@drawable/ic_favorite"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_recent"
        android:orderInCategory="100"
        android:title="@string/menu_recent"
        android:icon="@drawable/ic_time"
        app:showAsAction="never" />

</menu>