<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/application_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.test.empore.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.test.empore.fragment.FavoriteFragment"
        android:label="@string/menu_fav"
        tools:layout="@layout/fragment_favorite">

    </fragment>

    <fragment
        android:id="@+id/navigation_recent"
        android:name="com.test.empore.fragment.RecentFragment"
        android:label="@string/menu_recent"
        tools:layout="@layout/fragment_recent">

    </fragment>

</navigation>