<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/image_container"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@android:color/darker_gray"
                android:contentDescription="@string/news_thumbnail"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/news_fav"
                android:src="@drawable/ic_favorite"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/news_title"
            android:paddingTop="@dimen/news_title"
            android:paddingRight="@dimen/news_title"
            android:paddingBottom="5dp"
            android:text="@string/news_title"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/image_container" />

        <TextView
            android:id="@+id/meta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/news_title"
            android:paddingTop="5dp"
            android:paddingRight="@dimen/news_title"
            android:paddingBottom="@dimen/news_title"
            android:text="@string/news_date"
            android:textColor="@color/textQuiteLighter"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/time"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/news_title"
            android:paddingTop="5dp"
            android:paddingRight="@dimen/news_title"
            android:paddingBottom="@dimen/news_title"
            android:text="@string/news_meta"
            android:textColor="@color/textQuiteLighter"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="@id/meta"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>